service-a-service.yaml
# service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  type: ClusterIP
  ports:
    - port: 81
      targetPort: 81
  selector:
    app: service-a
