service-b-service.yaml
# service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  type: ClusterIP
  ports:
    - port: 82
      targetPort: 82
  selector:
    app: service-b
